Fix post dates alignment on home page

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,8 @@ ul.posts li {
 		} 
 	}
 	span {
+		width:6.5em;
+		text-align: right;
 		font-size: 60%;
 		margin-right: .5em;
 	}
